@@ -33,6 +33,7 @@ orx 1.1 rc0
 * orxSystem module is now part of core (external library independent) and not a plugin anymore (+updated all configurations)
 * When querying screen texture size, the latest display size will always be used
 * Updated bounce demo to be able to change resolution on the fly (F1/F2) + ToggleFullScreen on F3
+* Added orx_WinExecute() helper for console-less windows application
 * Added __orxWII__ platform define for future work
 
 orx 1.0 final
